@@ -37,6 +37,12 @@
   * src/cmd/cmd_bfin.c, src/cmd/cmd_set.c: Use new tokens arg to selectively
     add matches for specific sub-commands.
 
+  * include/urjtag/log.h, src/global/log-error.c: Add new helpers for
+    converting between string versions of log levels and the actual log
+    level value.
+  * src/cmd/cmd_debug.c: Drop local log level converters and use new
+    common helpers.
+
 2011-06-27  Jie Zhang  <jie.zhang@analog.com>
 
   * include/urjtag/Makefile.am (nodist_pkginclude_HEADERS): New and
